--- a/lang/ilias_en.lang
+++ b/lang/ilias_en.lang
@@ -3,6 +3,11 @@
 //
 
 <!-- language file start -->
+crs_create_xmpl#:#Create Match & Memo Pool
+grp_create_xmpl#:#Create Match & Memo Pool
+fold_create_xmpl#:#Create Match & Memo Pool
+root_create_xmpl#:#Create Match & Memo Pool
+cat_create_xmpl#:#Create Match & Memo Pool
 obj_xmpl#:#Match & Memo Pool
 objs_xmpl#:#Match & Memo Pool
 obj_xmpl_duplicate#:#Copy Match & Memo Pool
