--- a/lang/ilias_de.lang
+++ b/lang/ilias_de.lang
@@ -29,7 +29,7 @@ card#:#Karte
 edit_pair#:#Paar bearbeiten
 pair_browser#:#Paare
 mpl_online_property#:#Online
-mpl_online_property_description#:#Nur Match & Memo Pools, die Online sind, können in Match & Memo Spielen verwendet werden.
+mpl_online_property_description#:#Nur Match & Memo Pools, die "online" sind, können in Match & Memo Spielen verwendet werden.
 pair_solution#:#Lösungstext
 obj_mpl_select#:#--- Bitte auswählen ---
 mpl_pairs_imported#:#Es wurden %d Paare importiert.
@@ -51,3 +51,5 @@ matchmemopool_plugin_configuration#:#Match & Memo Pool Plugin-Konfiguration
 configuration_saved#:#Konfiguration gespeichert
 save_close#:#Speichern und Schließen
 save_new#:#Speichern und neues Paar erstellen
+cannot_set_online_not_enough_pairs#:#Der Match & Memo Pool kann nicht "online" geschaltet werden, da mindestens 16 Paare benötigt werden.
+not_enough_pairs#:#Es sind weniger als 16 Paare enthalten.
