--- a/lang/ilias_en.lang
+++ b/lang/ilias_en.lang
@@ -20,6 +20,7 @@ xmpl_write#:#Edit Match & Memo Pool
 xmpl_delete#:#Delete Match & Memo Pool
 xmpl_visible#:#Match & Memo Pool is visible
 xmpl_edit_permission#:#Change permission settings
+xmpl_copy#:#Copy
 edit#:#Edit
 properties#:#Properties
 plugininfo#:#Plugin-Information
@@ -38,7 +39,7 @@ import_no_title#:#Import (no title)
 import_no_description#:#Import (no description)
 import_unknown#:#Unknown
 upload_file#:#Upload file
-upload_file_description#:#To insert textual Match & Memo pairs please upload a CSV file. Enter at least the two cards in a row and optionally a solution text, a pair title, an author and a description. Separate the entries by a semicolon. If you have to use a semicolon in one of the entries, please precede each semicolon with a backslash. For example: Card 1;Card 2;;Pair title;Jayne Doe; or Card 1;Card 2;Solution;;;A description
+upload_file_description#:#To insert textual Match & Memo pairs please upload a CSV file. Enter at least the two cards in a row and optionally a solution text, a pair title, an author and a description. Separate the entries by a semicolon. If you have to use a semicolon in one of the entries, please precede each semicolon with a backslash. For example: Card 1;Card 2;Solution;Title;Author;Description
 msg_pairs_no_selection#:#Please select at least one Match & Memo Pair.
 msg_pairs_deleted#:#Match & Memo Pair(s) deleted.
 paste_no_objects#:#There are no pairs in the clipboard. Please copy or move a pair into the clipboard.
