Fixed language files

--- a/lang/ilias_de.lang
+++ b/lang/ilias_de.lang
@@ -9,7 +9,7 @@ fold_create_xmpl#:#Neuen Match & Memo Pool anlegen
 root_create_xmpl#:#Neuen Match & Memo Pool anlegen
 cat_create_xmpl#:#Neuen Match & Memo Pool anlegen
 obj_xmpl#:#Match & Memo Pool
-objs_xmpl#:#Match & Memo Pool
+objs_xmpl#:#Match & Memo Pools
 obj_xmpl_duplicate#:#Kopiere Match & Memo Pool
 objs_xmpl_duplicate#:#Kopiere Match & Memo Pools
 obj_xmpl_select#:#Wähle Match & Memo Pool
